@@ -16,10 +16,10 @@
 package io.apiman.manager.api.core.config;
 
 import io.apiman.common.config.ConfigFactory;
-import io.apiman.manager.api.core.logging.IApimanLogger;
+import io.apiman.common.logging.IApimanLogger;
 
-import java.net.MalformedURLException;
-import java.net.URL;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -43,18 +43,26 @@ public abstract class ApiManagerConfig {
 
     public static final String APIMAN_MANAGER_NEW_USER_BOOTSTRAPPER_TYPE = "apiman-manager.user-bootstrapper.type"; //$NON-NLS-1$
 
+    /*
+     * Database/hibernate properties
+     */
+    public static final String APIMAN_MANAGER_HIBERNATE_DIALECT = "apiman.hibernate.dialect"; //$NON-NLS-1$
+    public static final String APIMAN_MANAGER_HIBERNATE_DS = "apiman.hibernate.connection.datasource"; //$NON-NLS-1$
+
+
     /* -------------------------------------------------------
      * Storage
      * ------------------------------------------------------- */
     public static final String APIMAN_MANAGER_STORAGE_TYPE = "apiman-manager.storage.type"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_PROTOCOL = "apiman-manager.storage.es.protocol"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_HOST = "apiman-manager.storage.es.host"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_PORT = "apiman-manager.storage.es.port"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_CLUSTER_NAME = "apiman-manager.storage.es.cluster-name"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_USERNAME = "apiman-manager.storage.es.username"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_PASSWORD = "apiman-manager.storage.es.password"; //$NON-NLS-1$
+    public static final String APIMAN_MANAGER_STORAGE_JPA_INITIALIZE = "apiman-manager.storage.jpa.initialize"; //$NON-NLS-1$
+    public static final String APIMAN_MANAGER_STORAGE_ES_CLIENT_FACTORY = "apiman-manager.storage.es.client-factory"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_HOST = "apiman-manager.storage.es.host"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_PORT = "apiman-manager.storage.es.port"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_CLUSTER_NAME = "apiman-manager.storage.es.cluster-name"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_USERNAME = "apiman-manager.storage.es.username"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_PASSWORD = "apiman-manager.storage.es.password"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_STORAGE_ES_TIMEOUT = "apiman-manager.storage.es.timeout"; //$NON-NLS-1$
     public static final String APIMAN_MANAGER_STORAGE_ES_INITIALIZE = "apiman-manager.storage.es.initialize"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_STORAGE_ES_TIMEOUT = "apiman-manager.storage.es.timeout"; //$NON-NLS-1$
     public static final String APIMAN_MANAGER_STORAGE_ES_INDEX_NAME = "apiman-manager.storage.es.index"; //$NON-NLS-1$
 
     public static final String APIMAN_MANAGER_STORAGE_QUERY_TYPE = "apiman-manager.storage-query.type"; //$NON-NLS-1$
@@ -65,13 +73,14 @@ public abstract class ApiManagerConfig {
      * Metrics
      * ------------------------------------------------------- */
     public static final String APIMAN_MANAGER_METRICS_TYPE = "apiman-manager.metrics.type"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_PROTOCOL = "apiman-manager.metrics.es.protocol"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_HOST = "apiman-manager.metrics.es.host"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_PORT = "apiman-manager.metrics.es.port"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_CLUSTER_NAME = "apiman-manager.metrics.es.cluster-name"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_USERNAME = "apiman-manager.metrics.es.username"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_PASSWORD = "apiman-manager.metrics.es.password"; //$NON-NLS-1$
-    public static final String APIMAN_MANAGER_METRICS_ES_TIMEOUT = "apiman-manager.metrics.es.timeout"; //$NON-NLS-1$
+    public static final String APIMAN_MANAGER_METRICS_ES_CLIENT_FACTORY = "apiman-manager.metrics.es.client-factory"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_PROTOCOL = "apiman-manager.metrics.es.protocol"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_HOST = "apiman-manager.metrics.es.host"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_PORT = "apiman-manager.metrics.es.port"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_CLUSTER_NAME = "apiman-manager.metrics.es.cluster-name"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_USERNAME = "apiman-manager.metrics.es.username"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_PASSWORD = "apiman-manager.metrics.es.password"; //$NON-NLS-1$
+//    public static final String APIMAN_MANAGER_METRICS_ES_TIMEOUT = "apiman-manager.metrics.es.timeout"; //$NON-NLS-1$
 
     public static final String APIMAN_MANAGER_SECURITY_CONTEXT_TYPE = "apiman-manager.security-context.type"; //$NON-NLS-1$
 
@@ -101,15 +110,21 @@ public abstract class ApiManagerConfig {
     /**
      * @return the configured plugin repositories
      */
-    public Set<URL> getPluginRepositories() {
-        Set<URL> rval = new HashSet<>();
+    public Set<URI> getPluginRepositories() {
+        Set<URI> rval = new HashSet<>();
         String repositories = config.getString(APIMAN_PLUGIN_REPOSITORIES);
         if (repositories != null) {
             String[] split = repositories.split(","); //$NON-NLS-1$
             for (String repository : split) {
                 try {
-                    rval.add(new URL(repository.trim()));
-                } catch (MalformedURLException e) {
+                    repository = repository.trim();
+                    if (!repository.isEmpty()) {
+                        if (repository.startsWith("file:")) { //$NON-NLS-1$
+                            repository = repository.replace('\\', '/');
+                        }
+                        rval.add(new URI(repository.trim()));
+                    }
+                } catch (URISyntaxException e) {
                     throw new RuntimeException(e);
                 }
             }
@@ -120,15 +135,21 @@ public abstract class ApiManagerConfig {
     /**
      * @return the configured plugin registries
      */
-    public Set<URL> getPluginRegistries() {
-        Set<URL> rval = new HashSet<>();
+    public Set<URI> getPluginRegistries() {
+        Set<URI> rval = new HashSet<>();
         String registries = config.getString(APIMAN_PLUGIN_REGISTRIES);
         if (registries != null) {
             String[] split = registries.split(","); //$NON-NLS-1$
             for (String registry : split) {
                 try {
-                    rval.add(new URL(registry.trim()));
-                } catch (MalformedURLException e) {
+                    registry = registry.trim();
+                    if (!registry.isEmpty()) {
+                        if (registry.startsWith("file:")) { //$NON-NLS-1$
+                            registry = registry.replace('\\', '/');
+                        }
+                        rval.add(new URI(registry));
+                    }
+                } catch (URISyntaxException e) {
                     throw new RuntimeException(e);
                 }
             }
@@ -155,6 +176,20 @@ public abstract class ApiManagerConfig {
     }
 
     /**
+     * @return the configured hibernate data source
+     */
+    public String getHibernateDataSource() {
+        return config.getString(APIMAN_MANAGER_HIBERNATE_DS, null);
+    }
+
+    /**
+     * @return the configured hibernate dialect
+     */
+    public String getHibernateDialect() {
+        return config.getString(APIMAN_MANAGER_HIBERNATE_DIALECT, null);
+    }
+
+    /**
      * @return the configured storage type
      */
     public String getStorageType() {
@@ -167,6 +202,13 @@ public abstract class ApiManagerConfig {
     public String getStorageQueryType() {
         return config.getString(APIMAN_MANAGER_STORAGE_QUERY_TYPE, getStorageType());
     }
+    
+    /**
+     * @return true if the elasticsearch index should be initialized if not found
+     */
+    public boolean isInitializeStorageJPA() {
+        return config.getBoolean(APIMAN_MANAGER_STORAGE_JPA_INITIALIZE, false);
+    }
 
     /**
      * @return the configured API catalog query type
@@ -176,51 +218,22 @@ public abstract class ApiManagerConfig {
     }
 
     /**
-     * @return the elasticsearch protocol
+     * @return the elasticsearch client factory or null if not configured
      */
-    public String getStorageESProtocol() {
-        return config.getString(APIMAN_MANAGER_STORAGE_ES_PROTOCOL, "http"); //$NON-NLS-1$
-    }
-
-    /**
-     * @return the elasticsearch host
-     */
-    public String getStorageESHost() {
-        return config.getString(APIMAN_MANAGER_STORAGE_ES_HOST, "localhost"); //$NON-NLS-1$
-    }
-
-    /**
-     * @return the elasticsearch port
-     */
-    public int getStorageESPort() {
-        return config.getInt(APIMAN_MANAGER_STORAGE_ES_PORT, 19200);
-    }
-
-    /**
-     * @return the elasticsearch cluster name
-     */
-    public String getStorageESClusterName() {
-        return config.getString(APIMAN_MANAGER_STORAGE_ES_CLUSTER_NAME, DEFAULT_ES_CLUSTER_NAME);
-    }
-
-    /**
-     * @return the elasticsearch username
-     */
-    public String getStorageESUsername() {
-        return config.getString(APIMAN_MANAGER_STORAGE_ES_USERNAME, null);
-    }
-
-    /**
-     * @return the elasticsearch username
-     */
-    public String getStorageESPassword() {
-        return config.getString(APIMAN_MANAGER_STORAGE_ES_PASSWORD, null);
-    }
-
-    public int getStorageESTimeout() {
-        return config.getInt(APIMAN_MANAGER_STORAGE_ES_TIMEOUT, DEFAULT_JEST_TIMEOUT);
+    public String getStorageESClientFactory() {
+        return config.getString(APIMAN_MANAGER_STORAGE_ES_CLIENT_FACTORY);
     }
     
+    /**
+     * @return a map of config properties for the es client factory
+     */
+    public Map<String, String> getStorageESClientFactoryConfig() {
+        return getPrefixedProperties("apiman-manager.storage.es."); //$NON-NLS-1$
+    }
+
+    /**
+     * @return the storage es index name
+     */
     public String getStorageESIndexName() {
         return config.getString(APIMAN_MANAGER_STORAGE_ES_INDEX_NAME, DEFAULT_ES_INDEX_NAME);
     }
@@ -247,49 +260,17 @@ public abstract class ApiManagerConfig {
     }
 
     /**
-     * @return the elasticsearch protocol
+     * @return the elasticsearch client factory or null if not configured
      */
-    public String getMetricsESProtocol() {
-        return config.getString(APIMAN_MANAGER_METRICS_ES_PROTOCOL, "http"); //$NON-NLS-1$
+    public String getMetricsESClientFactory() {
+        return config.getString(APIMAN_MANAGER_METRICS_ES_CLIENT_FACTORY);
     }
-
+    
     /**
-     * @return the elasticsearch host
+     * @return a map of config properties for the es client factory
      */
-    public String getMetricsESHost() {
-        return config.getString(APIMAN_MANAGER_METRICS_ES_HOST, "localhost"); //$NON-NLS-1$
-    }
-
-    /**
-     * @return the elasticsearch port
-     */
-    public int getMetricsESPort() {
-        return config.getInt(APIMAN_MANAGER_METRICS_ES_PORT, 19200);
-    }
-
-    /**
-     * @return the elasticsearch cluster name
-     */
-    public String getMetricsESClusterName() {
-        return config.getString(APIMAN_MANAGER_METRICS_ES_CLUSTER_NAME, DEFAULT_ES_CLUSTER_NAME);
-    }
-
-    /**
-     * @return the elasticsearch username
-     */
-    public String getMetricsESUsername() {
-        return config.getString(APIMAN_MANAGER_METRICS_ES_USERNAME, null);
-    }
-
-    /**
-     * @return the elasticsearch password
-     */
-    public String getMetricsESPassword() {
-        return config.getString(APIMAN_MANAGER_METRICS_ES_PASSWORD, null);
-    }
-
-    public int getMetricsESTimeout() {
-        return config.getInt(APIMAN_MANAGER_METRICS_ES_TIMEOUT, DEFAULT_JEST_TIMEOUT);
+    public Map<String, String> getMetricsESClientFactoryConfig() {
+        return getPrefixedProperties("apiman-manager.metrics.es."); //$NON-NLS-1$
     }
 
     /**
