@@ -29,7 +29,10 @@ import java.io.FileOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
+import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.URLConnection;
 import java.util.HashMap;
 import java.util.Map;
 import java.util.Set;
@@ -160,8 +163,8 @@ public abstract class AbstractPluginRegistry implements IPluginRegistry {
         }
 
         // Didn't find it in .m2, so try downloading it.
-        Set<URL> repositories = getMavenRepositories();
-        for (URL mavenRepoUrl : repositories) {
+        Set<URI> repositories = getMavenRepositories();
+        for (URI mavenRepoUrl : repositories) {
             if (downloadFromMavenRepo(pluginFile, coordinates, mavenRepoUrl)) {
                 return;
             }
@@ -171,13 +174,22 @@ public abstract class AbstractPluginRegistry implements IPluginRegistry {
     /**
      * Tries to download the plugin from the given remote maven repository.
      */
-    protected boolean downloadFromMavenRepo(File pluginFile, PluginCoordinates coordinates, URL mavenRepoUrl) {
+    protected boolean downloadFromMavenRepo(File pluginFile, PluginCoordinates coordinates, URI mavenRepoUrl) {
         String artifactSubPath = PluginUtils.getMavenPath(coordinates);
         InputStream istream = null;
         OutputStream ostream = null;
         try {
-            URL artifactUrl = new URL(mavenRepoUrl, artifactSubPath);
-            istream = artifactUrl.openStream();
+            URL artifactUrl = new URL(mavenRepoUrl.toURL(), artifactSubPath);
+            URLConnection connection = artifactUrl.openConnection();
+            connection.connect();
+            if (connection instanceof HttpURLConnection) {
+                HttpURLConnection httpConnection = (HttpURLConnection) connection;
+                if (httpConnection.getResponseCode() != 200) {
+                    throw new IOException();
+                }
+            }
+
+            istream = connection.getInputStream();
             ostream = new FileOutputStream(pluginFile);
             IOUtils.copy(istream, ostream);
             ostream.flush();
@@ -193,7 +205,7 @@ public abstract class AbstractPluginRegistry implements IPluginRegistry {
     /**
      * A valid set of remove maven repository URLs.
      */
-    protected Set<URL> getMavenRepositories() {
+    protected Set<URI> getMavenRepositories() {
         return PluginUtils.getDefaultMavenRepositories();
     }
 
